--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "enginer":{
+  "enginer": {
     "node": "22.12.0"
   },
   "name": "aribnbclone",
@@ -28,7 +28,6 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "passport-mongoose": "^0.0.1"
+    "passport-local-mongoose": "^8.0.0"
   }
 }
